--- a/Client/src/Component/Header/Responsive-Header.css
+++ b/Client/src/Component/Header/Responsive-Header.css
@@ -62,6 +62,7 @@
   }
 
   .navbar .headerIcon {
+    width: fit-content;
     display: flex;
   }
 }
